Enhance security and authentication handling
- Added profile-based configuration to SecurityConfig and JwtAuthenticationFilter to prevent loading in test environments.
- Made AuthenticationManager optional in AuthenticationController for test profile context.
- Improved role assignment in CustomUserDetailsService based on account type.
- Updated AccountService to utilize PasswordEncoder for password handling.
- Refactored integration tests to use MockMvc for testing endpoints, removing reliance on TestRestTemplate.
- Enhanced error handling and logging in AuthenticationController during login attempts.

These changes aim to streamline security configurations and improve testability while maintaining robust authentication practices.